# Cinder-OpenCV3

samples/ocvBasic/: CMakeLists.txt
samples/ocvCapture/: CMakeLists.txt
samples/ocvColorQuantize/: CMakeLists.txt
samples/ocvFaceDetect/: CMakeLists.txt
samples/ocvFaceDetect/src/: ocvFaceDetectApp.cpp
samples/ocvOpticalFlow/: CMakeLists.txt
samples/ocvPerspective/: CMakeLists.txt
samples/ocvWarp/: CMakeLists.txt
